--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/cache": "^11.12.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
+    "@iconify/react": "^6.0.2",
     "@tanstack/react-table": "^8.19.3",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
@@ -21,7 +22,6 @@
     "@types/react-dom": "^18.0.6",
     "apexcharts": "3.50.0",
     "framer-motion": "^11.3.7",
-    
     "react": "19.0.0",
     "react-apexcharts": "1.4.1",
     "react-calendar": "^5.0.0",
